--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
+beautifulsoup4==4.11.2
+certifi==2022.12.7
+charset-normalizer==3.0.1
+idna==3.4
 isodate==0.6.1
 numpy==1.24.2
 pandas==1.5.3
@@ -5,4 +9,7 @@ pyparsing==3.0.9
 python-dateutil==2.8.2
 pytz==2022.7.1
 rdflib==6.2.0
+requests==2.28.2
 six==1.16.0
+soupsieve==2.4
+urllib3==1.26.14
